added code to html file

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -7,12 +7,50 @@
     <title>Prework Study Guide</title>
   </head>
   <body>
-    <header id="header">
+    <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+      <h2>HTML</h2>
+      <ul>
+        <li>The head element contains inofrmation about the webpage.</li>
+        <li>The body element represents the visible content shown to the user.</li>
+        <li>Make sure to double check all symbolism and commands before moving on.</li>
+        <li>follow the lines of order as they show the proper connections.</li>
+        <li>Be careful when typing, one error can make the whole page go red</li>
+      </ul>
+      </section> 
+
+    </section class="card" id="css-section"> 
+      <h2>CSS</h2>
+      <ul>
+        <li>Enter your CSS notes here</li>
+      </ul>
+
+     </section>
+
+    </section class="card" id="git-section">
+     <h2>Git</h2>
+     <ul>
+        <li>Make sure to use the Git status as often as possible</li>
+        <li>Whenever you are modifying make sure to use the branch line</li>
+        <li>Git status: checks what branch we are currently on</li>
+        <li>git checkout -b branch name: creates a new branch and switches to it</li>
+        <li>When author is uknown use git config --global user.email "your email@your email.com</li>
+        <li>Link every computer you use to gothub to continue access to repos</li>
+     </ul>
+
+     </section>
+
+     </section class="card" id="javascript-section">
+      <h2>JavaScript</h2>
+       <ul>
+        <li>Enter your JavaScript notes here</li>
+       </ul>
+
+     </section>
     </main>
 
     <footer>
