added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -23,15 +24,19 @@
       </ul>
       </section> 
 
-    </section class="card" id="css-section"> 
+    <section class="card" id="css-section"> 
       <h2>CSS</h2>
       <ul>
         <li>Enter your CSS notes here</li>
+        <li>A margin indicates how much space we want around the outside of an element</li>
+        <li>A padding indicates how much space we want around the content inside the element</li>
+        <li>Make sure to double check the sections or code that is modified for any excess symbols</li>
+        <li>CSS is used to modify the sections and code to add flair or personality based on the area and paramaters inputted.</li>
       </ul>
 
      </section>
 
-    </section class="card" id="git-section">
+    <section class="card" id="git-section">
      <h2>Git</h2>
      <ul>
         <li>Make sure to use the Git status as often as possible</li>
@@ -44,7 +49,7 @@
 
      </section>
 
-     </section class="card" id="javascript-section">
+     <section class="card" id="javascript-section">
       <h2>JavaScript</h2>
        <ul>
         <li>Enter your JavaScript notes here</li>
