--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -28,17 +29,14 @@
       <h2>CSS</h2>
       <ul>
         <li>Enter your CSS notes here</li>
-<<<<<<< HEAD
         <li>A margin indicates how much space we want around the outside of an element</li>
         <li>A padding indicates how much space we want around the content inside the element</li>
         <li>Make sure to double check the sections or code that is modified for any excess symbols</li>
         <li>CSS is used to modify the sections and code to add flair or personality based on the area and paramaters inputted.</li>
-=======
         <li>CSS is mostly used to add effects and shadows</li>
         <li>A margin indicates how much space we want around the outside of an element</li>
         <li>A padding indicates how much space we want arounnd the content inside an element</li>
         <li>It is best to imagine all the settings as a box around the content</li>
->>>>>>> 727a9c5632758ad26272b92552ab454005333fb0
       </ul>
 
      </section>
@@ -68,5 +66,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
