--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
      <section class="card" id="javascript-section">
       <h2>JavaScript</h2>
        <ul>
-        <li>Enter your JavaScript notes here</li>
+        <li>A variable is named container that allows us to store data in our code</li>
+        <li>Control flow is the order in which a computer executes code in script</li>
+        <li>Java is always read top to bottom, both in code and troubleshoot</li>
+        <li>Make sure the order and commands match otherwise the program will fail or bug</li>
+        <li>When troubleshooting make sure that commands meatch in correct order</li>
        </ul>
 
      </section>
